[tool.poetry]
name = "datastruct-module"
version = "0.1.0"
description = ""
authors = ["marie-george <maria85night@gmail.com>"]
readme = "README.md"
packages = [{include = "datastruct_module"}]

[tool.poetry.dependencies]
python = "3.11.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
